version 0.60.2
25/04/2018
	- implemented OAuth2 client registration (margaretha)
	- implemented OAuth2 client authentication (margaretha)
	- changed virtual corpus search to retrieval (margaretha)
	- implemented public client deregistration task (margaretha)
	- added client registration and deregistration tests (margaretha)
	- implemented confidential client deregistration task (margaretha)
	- fixed storing client secret (margaretha)
	- implemented OAuth2 response handler (margaretha)
	- implemented OAuth2 request access token with client credentials grant (margaretha)
	- implemented OAuth2 request access token with resource owner password grant (margaretha)
	- implemented OAuth2 authorization code request (margaretha)
	- added OAuth2 error codes (margaretha)
	- added OAuth2 authorization, scope and access token tables for SQLite (margaretha)
	- implemented OAuth2 authorization, scope and access token DAO (margaretha)
	- implemented OAuth2 request access token with authorization code grant (margaretha)
	
version 0.60.1
28/03/2018
	- added admin-related SQL codes (margaretha)
	- updated AdminDao (margaretha)
	- added optional username query parameter to group list controller (margaretha) 
	- fixed non hierarchical URI of kustvakt conf files (margaretha)
	- added delete group member triggers (margaretha)
	- added list user-group by username and status for system admin (margaretha)
	- added user-group status in user-group DTO (margaretha)
	- added check for hidden groups in user-group tests (margaretha)
	- added database trigger test on deleting members when deleting group (margaretha)
	- renamed VC type PREDEFINED to SYSTEM (margaretha)
	- added VC list controller for system admin (margaretha)
	- added VC controller tests with for system admin (margaretha) 
	- added hidden access removal when deleting published VC (margaretha)
	- added check for hidden groups in VC controller tests (margaretha)
	- added search user-group controller (margaretha)