@@ -4,8 +4,6 @@ import java.util.List;
 
 import javax.persistence.Entity;
 import javax.persistence.FetchType;
-import javax.persistence.GeneratedValue;
-import javax.persistence.GenerationType;
 import javax.persistence.Id;
 import javax.persistence.ManyToMany;
 import javax.persistence.Table;
@@ -20,22 +18,26 @@ import lombok.Setter;
 public class AccessScope {
 
     @Id
-    @GeneratedValue(strategy = GenerationType.IDENTITY)
-    private int id;
-    private String name;
+    private String id;
+
+    public AccessScope () {}
+
+    public AccessScope (String scope) {
+        this.id = scope;
+    }
 
     @ManyToMany(mappedBy = "scopes", fetch = FetchType.LAZY)
     private List<Authorization> authorizationCodes;
 
     @Override
     public String toString () {
-        return "id: " + id + ", name: " + name;
+        return "id: " + id;
     }
 
     @Override
     public boolean equals (Object obj) {
-        String scope = (String) obj;
-        if (scope.equals(this.name)) {
+        AccessScope scope = (AccessScope) obj;
+        if (scope.getId().equals(this.id)) {
             return true;
         }
 
