@@ -3,9 +3,11 @@ package de.ids_mannheim.korap.config;
 import java.util.concurrent.ThreadLocalRandom;
 
 import org.junit.runner.RunWith;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.context.ApplicationContext;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
-import org.springframework.web.context.ContextLoaderListener;
+import org.springframework.web.context.WebApplicationContext;
 
 import com.sun.jersey.spi.spring.container.servlet.SpringServlet;
 import com.sun.jersey.test.framework.AppDescriptor;
@@ -18,6 +20,9 @@ import com.sun.jersey.test.framework.spi.container.grizzly.web.GrizzlyWebTestCon
 @RunWith(SpringJUnit4ClassRunner.class)
 @ContextConfiguration("classpath:test-config.xml")
 public abstract class SpringJerseyTest extends JerseyTest {
+
+    @Autowired
+    protected ApplicationContext applicationContext;
 
     private static String[] classPackages =
             new String[] { "de.ids_mannheim.korap.web.controller",
@@ -33,9 +38,13 @@ public abstract class SpringJerseyTest extends JerseyTest {
 
     @Override
     protected AppDescriptor configure () {
+
+        StaticContextLoaderListener.applicationContext =
+                (WebApplicationContext) applicationContext;
+
         return new WebAppDescriptor.Builder(classPackages)
                 .servletClass(SpringServlet.class)
-                .contextListenerClass(ContextLoaderListener.class)
+                .contextListenerClass(StaticContextLoaderListener.class)
                 .contextParam("contextConfigLocation",
                         "classpath:test-config.xml")
                 .build();
@@ -45,4 +54,5 @@ public abstract class SpringJerseyTest extends JerseyTest {
     protected int getPort (int defaultPort) {
         return ThreadLocalRandom.current().nextInt(5000, 8000 + 1);
     }
+
 }
