@@ -1,5 +1,5 @@
 version 0.60.2
-25/04/2018
+26/04/2018
 	- implemented OAuth2 client registration (margaretha)
 	- implemented OAuth2 client authentication (margaretha)
 	- changed virtual corpus search to retrieval (margaretha)
@@ -15,6 +15,8 @@ version 0.60.2
 	- added OAuth2 authorization, scope and access token tables for SQLite (margaretha)
 	- implemented OAuth2 authorization, scope and access token DAO (margaretha)
 	- implemented OAuth2 request access token with authorization code grant (margaretha)
+	- added setting default scopes in the config file (margaretha)
+	- fixed loading spring config multiple times in the test suite (margaretha)
 	
 version 0.60.1
 28/03/2018
